--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,8 @@ stages:
 
 jobs: 
   include:
+  - stage: test
+    env: TEST="formatting"
+    script: sbt scalafmtCheck scalafmtSbtCheck
   - stage: release   
     script: sbt ci-release
