--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     strategy:
       matrix:
-        scala: [2.12.13, 2.13.5, 3.0.0-RC3]
+        scala: [2.12.13, 2.13.5, 3.0.0]
     runs-on: ubuntu-latest
 
     steps:
