--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,6 @@ on: [push, pull_request]
 
 jobs:
   build:
-    strategy:
-      matrix:
-        scala: [2.12.13, 2.13.10, 3.1.2]
     runs-on: ubuntu-latest
 
     steps:
@@ -32,7 +29,7 @@ jobs:
 
     - name: Compile and test
       run: |
-        sbt ++${{matrix.scala}} test
+        sbt +test
 
     - name: Examples
       run: |
