--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,11 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - name: Set up JDK 8
+      uses: actions/setup-java@v3
       with:
-          java-version: 1.8
+          java-version: 8
+          distribution: temurin
 
     - name: Mount caches
       uses: actions/cache@v2
