--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,9 +18,10 @@ jobs:
           ~/.ivy2/cache
           ~/.cache/coursier
         key: ${{ runner.os }}-sbt-docs-${{ hashFiles('**/*.sbt') }}
-    - uses: actions/setup-java@v1
+    - uses: actions/setup-java@v3
       with:
         java-version: 12
+        distribution: temurin
     - uses: olafurpg/setup-gpg@v3
       if: startsWith(github.ref, 'refs/tags/v')
     - name: Publish ${{ github.ref }}
