add setup-sbt action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
           ~/.cache/coursier
         key: ${{ runner.os }}-sbt-${{matrix.scala}}-${{ hashFiles('**/*.sbt') }}
 
+    - uses: sbt/setup-sbt@v1
+
     - name: Formatting
       run: |
         sbt scalafmtCheck test:scalafmtCheck scalafmtSbtCheck
