--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,7 @@ jobs:
         distribution: temurin
     - uses: olafurpg/setup-gpg@v3
       if: startsWith(github.ref, 'refs/tags/v')
+    - uses: sbt/setup-sbt@v1
     - name: Publish ${{ github.ref }}
       run: sbt ci-release
       env:
